# math-sonify

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: sonification.md  synth.md  systems.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_systems.rs
src/: algorithmic_composer.rs  arrangement.rs  audio.rs  audio_analyzer.rs  audio_effects.rs  audio_pipeline.rs  bifurcation.rs  binaural_beats.rs  cellular_automaton.rs  collab.rs  composer.rs  composition.rs  config.rs  convolution.rs  duffing.rs  dynamic_processor.rs  effects.rs  error.rs  evolution.rs  fractal.rs  granular_synth.rs  harmonic_series.rs  harmony_system.rs  hindmarsh_rose.rs  live_input.rs  main.rs  markov_music.rs  melody_generator.rs  microtonal.rs  midi.rs  midi_export.rs  motif_composer.rs  music_theory.rs  network.rs  notation_exporter.rs  osc.rs  osc_sync.rs  patches.rs  phase_portrait.rs  pitch_detection.rs  (+26 more)
src/sonification/: am.rs  direct.rs  fm.rs  granular.rs  mod.rs  orbital.rs  spectral.rs  vocal.rs  waveguide_mapper.rs
src/synth/: bitcrusher.rs  chorus.rs  delay.rs  envelope.rs  eq.rs  fdn_reverb.rs  filter.rs  grain.rs  karplus.rs  limiter.rs  mod.rs  oscillator.rs  resonator.rs  reverb.rs  waveguide.rs  waveshaper.rs
src/synthesis/: mod.rs  physical.rs
src/systems/: aizawa.rs  arnold_cat.rs  bouali.rs  chua.rs  coupled_map_lattice.rs  custom_ode.rs  dadras.rs  delayed_map.rs  dequan_li.rs  double_pendulum.rs  duffing.rs  fractional_lorenz.rs  geodesic_torus.rs  halvorsen.rs  henon_map.rs  hyperchaos.rs  kuramoto.rs  kuramoto_driven.rs  logistic_map.rs  lorenz.rs  lorenz96.rs  mackey_glass.rs  mathieu.rs  mod.rs  newton_leipnik.rs  nose_hoover.rs  oregonator.rs  rikitake.rs  rossler.rs  rucklidge.rs  sakarya.rs  shimizu_morioka.rs  sprott_b.rs  sprott_d.rs  sprott_e.rs  sprott_f.rs  sprott_g.rs  sprott_h.rs  sprott_k.rs  sprott_l.rs  (+6 more)
tests/: integration.rs
