[package]
name = "math-sonify"
version = "1.2.0"
edition = "2021"
rust-version = "1.75"
description = "Real-time procedural audio from mathematical dynamical systems (Lorenz, Rossler, Double Pendulum, and more)"
license = "MIT"
repository = "https://github.com/Mattbusel/math-sonify"
homepage = "https://github.com/Mattbusel/math-sonify"
keywords = ["audio", "chaos", "dynamical-systems", "synthesis", "generative"]
categories = ["multimedia::audio", "science", "simulation"]
authors = ["Matt Busel <matt@mattbusel.com>"]
readme = "README.md"
documentation = "https://docs.rs/math-sonify"
exclude = [
    "release/",
    "screenshots/",
    "docs/bifurcation.png",
    "docs/portrait_*.png",
    "patch_*.py",
    "build_release.bat",
    "math_sonify_vision.pdf",
]

[[bin]]
name = "math-sonify"
path = "src/main.rs"

[lib]
name = "math_sonify_plugin"
path = "src/plugin.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Audio I/O
cpal = "0.15"

# GUI
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"

# Config + serialization
toml = "0.8"
serde = { version = "1", features = ["derive"] }
notify = "6"

# Concurrency utilities
crossbeam-channel = "0.5"
parking_lot = "0.12"
rayon = "1"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
hound = "3.5"
midir = "0.9"
png = "0.17"

# Tracing instrumentation
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# VST3/CLAP plugin support
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95", package = "nih_plug_egui" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[profile.dev]
opt-level = 1

[profile.bench]
opt-level = 3
lto = "thin"

[lints.clippy]
# Deny the most impactful correctness lints
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"
# Allow common false-positive triggers in audio DSP code
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
